# 42.43-craft

./: -draftrc  .editorconfig  .gitignore  42.43 craft.taskpaper  42.43 draft.taskpaper  Makefile  README.md  draftrc  pyproject.toml
_craft_documents/: main.py
_craft_documents/common/: Exercise.py  Folder.py  Preamble.py  Prompt.py
_craft_documents/configuration/: AllowEvalValidator.py  Configuration.py  DocumentNameValidator.py  MultipleExercisesValidator.py  RemoveCommentsValidator.py  TokensValidator.py
_craft_documents/debug/: Debugger.py  main.py
_craft_documents/templates/: TemplateManager.py  fetch.py
_tests/common/: test_Folder.py  test_Prompt.py  test_Prompter.py  test_TexTemplate.py  test_common_Configuration.py  test_helpers.py
_tests/configuration/: test_Configuration.py  test_HeaderValidator.py  test_PreambleValidator.py
_tests/templates/: test_TemplateManager.py
config.draft/: draftrc
config.draft/exercises/: intervals.ly  intervals.tex
config.draft/headers/: exam.tex  worksheet.tex
config.draft/preambles/: default.tex
configuration/: draftrc  preamble.tex
configuration/exercises/: intervals.ly
configuration/headers/: exam.tex  worksheet.tex
craft_documents/: __main__.py  main.py
craft_documents/FileSystem/: Copyable.py  DiskRepresentable.py  File.py  Folder.py  Moveable.py  README.md  Readable.py  Resource.py  Writable.py  __init__.py
craft_documents/Logger/: History.py  Logger.py
craft_documents/Models/: README.md  Template.py
craft_documents/Prompter/: Checkbox.py  Confirm.py  Editor.py  Expand.py  Input.py  (+6 more)
draft/: .editorconfig  LICENSE.txt  Makefile  README.md  __init__.py  app.py  main.py  pyproject.toml
templates/: preamble.tex
tests/: draftrc  test_configuration.py  test_header.py  test_tokens_not_present.tex
(+128 files in other folders)
