[tool.poetry]
name = "draft"
version = "0.1.0"
description = ""
authors = ["Tobias Hauser <apps.hausertobias@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
draft = "draft.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pathlib = "^1.0.1"
rich = "^13.4.2"
pyinquirer = "^1.0.3"
oyaml = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
